feat: add frontend configuration page for data service with symbol and strategy management

--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -749,6 +749,7 @@
                 </div>
                 <div class="service-links">
                     <a href="/service-data.html" target="_blank">Info</a>
+                    <a href="/config-data.html" target="_blank">Config</a>
                     <a href="/data/docs" target="_blank">API Docs</a>
                     <a href="/data/health" target="_blank">Health</a>
                 </div>
